# ssd_cell_checking

./: .gitignore  pyproject.toml  requirements.txt  ui.ui
src/: command_utils.py  credentials_generator.py  main.py  ping_utils.py  scan_utils.py  ssh_copy.py
